<resources>
    <string name="app_name">Kazeem A. Odukale</string>

    <string name="mainHeader">LeaseOrRentHome Inc.</string>
    <string name="enterButton">Enter</string>
    <string name="paymentOption">Select your payment option:</string>
    <string name="finalOption">Select the house you want:</string>
    <string name="fullname">Full Name</string>

    <string name="apartment">Apartments</string>
    <string name="detached">Detached Homes</string>
    <string name="semiDetached">Semi Detached Homes</string>
    <string name="condominium">Condominiums</string>
    <string name="townHouse">Town Houses</string>
    <string name="middleHeader">Selet Apartment types from Menu</string>
    <string name="apartmentString1Addr">2222 Eglington Avenue</string>
    <string name="apartmentString1Desc">2 bedroom</string>
    <string name="apartmentString1Price">CAD 1,250</string>
    <string name="apartmentString2Addr">5000 Birchmount Road</string>
    <string name="apartmentString2Desc">3 bedroom</string>
    <string name="apartmentString2Price">Price: CAD 1,550</string>
    <string name="apartmentString3Addr">4000 St Claire Avenue</string>
    <string name="apartmentString3Desc">Description: 2 bedroom</string>
    <string name="apartmentString3Price">Price: CAD 1,350</string>
    <string name="apartmentString4Addr">3020 Danforth Road</string>
    <string name="apartmentString4Desc">2 bedroom</string>
    <string name="apartmentString4Price">CAD 1,250</string>
    <string name="apartmentString5Addr">1124 Birhmount Road</string>
    <string name="apartmentString5Desc">Description: 2 bedroom</string>
    <string name="apartmentString5Price">CAD 1,150</string>
    <string name="nextButton">Next</string>
    <string name="checkOutScreen">Check-out Screen</string>

    <string name="detachedString1Addr">800 Old Navy Avenue</string>
    <string name="detachedString1Desc">4 bedroom, 2 sitting room</string>
    <string name="detachedString1Price">CAD 4,000</string>
    <string name="detachedString2Addr">1123 Community Avenue</string>
    <string name="detachedString2Desc">3 bedroom, 2 sitting room</string>
    <string name="detachedString2Price">CAD 3,200</string>
    <string name="detachedString3Addr">5555, Brampton Road</string>
    <string name="detachedString3Desc">2 bedroom, 1 sitting room</string>
    <string name="detachedString3Price">CAD 2,350</string>
    <string name="detachedString4Addr">770 Birchmount Avenue</string>
    <string name="detachedString4Desc">3 bedroom</string>
    <string name="detachedString4Price">CAD 2,800</string>
    <string name="detachedString5Addr">4070 Danforth Garden Road</string>
    <string name="detachedString5Desc">3 bedroom</string>
    <string name="detachedString5Price">CAD 3,800</string>
    <string name="finalSelection">You can make your choice</string>

    <string name="semiDetString1Addr">3999 Wilson Aderson Road</string>
    <string name="semiDetString1Desc">3 Bedroom Duplex</string>
    <string name="semiDetString1Price">CAD 4,800</string>
    <string name="semiDetString2Addr">3999 Adeniran Ogunsanya Drive</string>
    <string name="semiDetString2Desc">4 Bedroom, 2 Room Duplex</string>
    <string name="semiDetString2Price">CAD 7,800</string>
    <string name="semiDetString3Addr">3999 West End</string>
    <string name="semiDetString3Desc">2 Bedroom</string>
    <string name="semiDetString3Price">CAD 1,800</string>
    <string name="semiDetString4Addr">3999 Birchmount Drive</string>
    <string name="semiDetString4Desc">4 Bedroom, 2 Sitting room</string>
    <string name="semiDetString4Price">CAD 4,800</string>
    <string name="semiDetString5Addr">1288 St. Claire Ave. East</string>
    <string name="semiDetString5Desc">4 Bedroom, 2 Sitting room</string>
    <string name="semiDetString5Price">CAD 5,250</string>

    <string name="townHouseString1Addr">4444 Commercial Avenue</string>
    <string name="townHouseString1Desc">5 Bedroom Duplex</string>
    <string name="townHouseString1Price">CAD 6,800</string>
    <string name="townHouseString2Addr">3999 Ogunlana Drive</string>
    <string name="townHouseString2Desc">4 Bedroom, 3 Room Duplex</string>
    <string name="townHouseString2Price">CAD 7,200</string>
    <string name="townHouseString3Addr">3999 Kazeem Odukale Street</string>
    <string name="townHouseString3Desc">3 Bedroom duplex</string>
    <string name="townHouseString3Price">CAD 3,800</string>
    <string name="townHouseString4Addr">2299 Birchmount Drive</string>
    <string name="townHouseString4Desc">4 Bedroom, 2 Sitting room</string>
    <string name="townHouseString4Price">CAD 5,800</string>
    <string name="townHouseString5Addr">3233 Danforth Avenue West</string>
    <string name="townHouseString5Desc">3 Bedroom, 2 Sitting room</string>
    <string name="townHouseString5Price">CAD 6,250</string>

    <string name="condominiumString1Addr">4444 Commercial Avenue</string>
    <string name="condominiumString1Desc">5 Bedroom Duplex</string>
    <string name="condominiumString1Price">CAD 6,800</string>
    <string name="condominiumString2Addr">3999 Ogunlana Drive</string>
    <string name="condominiumString2Desc">4 Bedroom, 3 Room Duplex</string>
    <string name="condominiumString2Price">CAD 7,200</string>
    <string name="condominiumString3Addr">3999 Kazeem Odukale Street</string>
    <string name="condominiumString3Desc">3 Bedroom duplex</string>
    <string name="condominiumString3Price">CAD 3,800</string>
    <string name="condominiumString4Addr">2299 Birchmount Drive</string>
    <string name="condominiumString4Desc">4 Bedroom, 2 Sitting room</string>
    <string name="condominiumString4Price">CAD 5,800</string>
    <string name="condominiumString5Addr">3233 Danforth Avenue West</string>
    <string name="condominiumString5Desc">3 Bedroom, 2 Sitting room</string>
    <string name="condominiumString5Price">CAD 6,250</string>
    <string name="cash">Cash</string>
    <string name="creditCard">Credit Card</string>
    <string name="debitCard">Debit Card</string>
    <string name="cust_information">Customer Information</string>
    <string name="cardNumber">Credit/Debit Card number</string>
    <string name="ccv">CCV</string>
    <string name="addressOutput">Address and Price</string>
    <string name="creditCardOutput">Credit Card Number</string>
    <string name="ccvNumber">CCV number</string>
    <string name="favoritSport">Favorite Sport</string>
    <string name="finalMessage">Than you for your patronage</string>
    <string name="exitApp">Are you sure you want to exit this app</string>
    <string name="exit_app">Exit App</string>
    <string name="ccCard">Credit Card</string>
    <string name="dcCard">Debit Card</string>

    <string-array name="favoriteSport">
        <item>Soccer</item>
        <item>Table Tennis</item>
        <item>Gymnastics</item>
        <item>Wrestling</item>
        <item>Swimming</item>
    </string-array>

    <string-array name="favoriteFood">
        <item>Cheese</item>
        <item>Bread and butter</item>
        <item>Iyan and egusi</item>
        <item>Spagetti</item>
        <item>Cokies and milk</item>
    </string-array>
</resources>